# oeis-probe

./: .gitignore  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
src/oeis_probe/: cli.py  core.py
tests/: test_core.py
